--- a/c18-entregable-v2/src/index.css
+++ b/c18-entregable-v2/src/index.css
@@ -1,8 +1,9 @@
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -16,8 +17,17 @@ header {
   background-color: #ddd;
   padding: 20px 40px;
 }
-header h1{
+
+#mainHeader {
+  background-image: url(../public/assets/banner.jpg);
+  background-position: center;
+}
+
+header h1 {
   margin-bottom: 10px;
+  font-size: 3em;
+  text-align: center;
+  text-shadow: -2px -2px 0 white, 2px -2px 0 white, -2px 2px 0 white, 2px 2px 0 white;
 }
 
 header p span {
@@ -27,11 +37,29 @@ header p span {
   border-radius: 5px;
 }
 
+nav {
+  display: flex;
+  justify-content: space-around;
+  border: 2px solid black;
+  width: 50%;
+  margin: 20px auto;
+}
+
 .container {
   padding: 20px 40px;
   display: flex;
   flex-direction: row;
   gap: 30px;
+}
+
+main {
+  width: 50%;
+  margin: 20px auto;
+}
+
+main h2 {
+  text-align: center;
+  margin: 20px auto;
 }
 
 .producto {
@@ -42,24 +70,27 @@ header p span {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   gap: 10px;
 }
 
-.producto img{
+.producto img {
   width: 200px;
 }
-.producto h5{
+
+.producto h5 {
   text-align: center;
 }
 
-.producto h5 span{
+.producto h5 span {
   background-color: rgb(255, 178, 178);
   padding: 3px;
   font-weight: lighter;
   color: rgb(155, 0, 0);
   border-radius: 3px;
 }
-.producto button{
+
+.producto button {
   padding: 5px;
   text-transform: uppercase;
 }
